--- a/src/scss/components/_keyframes.scss
+++ b/src/scss/components/_keyframes.scss
@@ -12,13 +12,13 @@
 
 @keyframes fade-logo {
     to {
-        opacity: 0.4;
+        opacity: 0.2;
     }
 }
 
 @keyframes fade-title {
     to {
-        opacity: 0.6;
+        opacity: 1;
     }
 }
 
